src/scss/styles.scss
/*
  Imports
*/
@import 'settings';
@import 'foundation';
@import 'motion-ui';

/*
  Foundation
*/
@include foundation-global-styles;
@include foundation-forms;
@include foundation-typography;
@include foundation-xy-grid-classes;
@include foundation-flex-classes;
@include foundation-visibility-classes;
@include foundation-sticky;
@include foundation-top-bar;
@include foundation-menu;
@include foundation-button;
@include foundation-card;
@include foundation-orbit;
@include motion-ui-transitions;
@include motion-ui-animations;

/*
  Custom
*/
$section-padding: 2.5rem 0;

#navbar {
  .top-bar {
    padding: 0;
  }

  .top-bar-left {
    padding: 0.5rem;

    .title {
      font-family: $header-font-family;

      h4 {
        margin-bottom: 0;
      }
    }
  }

  .top-bar-left, .top-bar-right {
    height: 100%;
    flex: 0 0 auto;
  }

  ul {
    display: flex;
    align-items: center;
    height: 100%;

    a {
      color: $white;
    }

    button {
      font-weight: bold;
    }
  }
}

#landing {
  height: 90vh;

  // Temporary logo.
  h1 {
    color: $primary-color;
    font-size: 5rem;
    line-height: 1;
  }

  p {
    margin: 0;
  }

  .event-info {
    font-weight: bold;
    color: $warning-color;
    font-size: 1.25rem;
  }

  .logo {
    width: 250px;
  }

  .caption {
    margin-top: 30px;
  }
}

#about {
  background: $primary-color;
  padding: $section-padding;

  .about-card {
    display: block;

    @include breakpoint(medium down) {
      padding: 1.25rem;
    }

    @include breakpoint(large) {
      padding: 2.5rem;
    }

    .carousel-cell {
      margin-top: 2.5rem;

      .orbit-previous, .orbit-next {
        color: $dark-gray;
      }

      .orbit-slide {
        img {
          height: 200px;
        }

        .img-caption {
          font-weight: bold;
          margin-top: 1rem;
        }
      }
    }
  }
}

#schedule {
  padding: $section-padding;

  .schedule-cell {
    margin-bottom: 2rem;
  }

  .dates{
    color: $warning-color;
  }

  .time-slot {
    display: flex;
    border-bottom: rgba(255, 255, 255, 0.25) 1px solid;
    padding: 1rem 0;
    margin-right: 2rem;

    .time {
      width: 3.75rem;
    }
  }

  .vertical-divider {
    display: inline-block;
    height: 20px;
    width: 1px;
    background: rgba(255, 255, 255, 0.25);
    margin-right: 1rem;
  }
}

#venue {
  background: $primary-color;

  .map-container {
    height: 50vh;
  }

  .map {
    width: 100%;
    height: 100%;
  }

  .venue-container {
    padding: $section-padding;
  }
}

#faq {
  padding: $section-padding;
  .question{
    color: $warning-color;
  }
}

#sponsor {
  background: $primary-color;
  padding: $section-padding;
}

/*
  Utils
*/
.full-height {
  height: 100%;
}

.divider {
  display: inline-block;
  background: $white;
  height: 5px;
  width: 200px;
  margin: 2rem 0 1.5rem;
}

